bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: value R
if (litMessage()==R){
                  ^BDR:4: error: not found: value L
} else if (litMessage()==L){
                         ^BDR:7: error: not found: value I
} else if (litMessage()==I){
                         ^BDR:11: error: not found: value A
} else if (litMessage()==A){
                         ^BDR:13: error: not found: value B
} else if (litMessage()==B){
                         ^BDR:16: error: not found: value C
} else if (litMessage()==C){
                         ^BDR:20: error: not found: value Z
} else if (litMessage()==Z){
                         ^BDR:22: error: not found: value Y
} else if (litMessage()==Y){
                         ^BDR:25: error: value update is not a member of String
} else if (litMessage()=X){
           ^BDR:25: error: not found: value X
} else if (litMessage()=X){
                        ^